# rust-jieba

./: .gitmodules  .travis.yml  Cargo.toml  README.md
cjieba-sys/: Cargo.toml  build.rs
cjieba-sys/src/: binding.rs
src/: lib.rs
tests/: test_jieba.rs
